@@ -1,3 +1,9 @@
+2002-02-07  Daniel Jacobowitz  <drow@mvista.com>
+
+	* bfd-in.h: Update <stdbool.h> check to only see if <stdbool.h> has
+	been included, not drag it in.
+	* bfd-in2.h: Regenerate.
+
 2002-02-06  H.J. Lu  (hjl@gnu.org)
 
 	* elf32-mips.c (_bfd_mips_elf_merge_private_bfd_data): Update
